--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 	<script>
-		// let docEle = document.documentElement;
-		// function setRemUnit() {
-		// 	docEle.style.fontsize = docEle.clientWidth / 10 + 'px'
-		// }
+		let docEle = document.documentElement;
+		function setRemUnit() {
+			docEle.style.fontsize = docEle.clientWidth / 10 + 'px'
+		}
 	</script>
 	<div id="root"></div>
 </body>
